[package]
name = "teip"
version = "2.3.0"
authors = ["Yasuhiro Yamada <yamada@gr3.ie>"]
description = "Masking tape to help commands \"do one thing well\""
keywords = ["sed", "awk", "util"]
documentation = "https://github.com/greymd/teip"
homepage = "https://github.com/greymd/teip"
repository = "https://github.com/greymd/teip"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
regex = "1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
env_logger = "0.7.1"
lazy_static = "1.4.0"
onig = { version = "6", optional = true }
structopt = "0.3.15"
cfg-if = "0.1"

[build-dependencies]
pkg-config = "0.3.26"

[dev-dependencies]
assert_cmd = "1.0.1"
criterion = "0.3.2"

[[bench]]
name = "cmdbench"
harness = false

[features]
default = []
oniguruma = ["onig"]
