[package]
name = "teip"
version = "2.3.1"
authors = ["Yasuhiro Yamada <yamada@gr3.ie>"]
description = "Masking tape to help commands \"do one thing well\""
keywords = ["sed", "awk", "util"]
documentation = "https://github.com/greymd/teip"
homepage = "https://github.com/greymd/teip"
repository = "https://github.com/greymd/teip"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
regex = "1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
env_logger = "0.10.1"
lazy_static = "1.4.0"
structopt = "0.3.26"
cfg-if = "0.1"

# Workaround of build failure https://github.com/rust-onig/rust-onig/pull/174#issuecomment-1730863567 Keep them until new onig crate' is released
onig = { git = "https://github.com/rust-onig/rust-onig", revision = "fa90c0e97e90a056af89f183b23cd417b59ee6a2" , optional = true}

[patch.crates-io]
onig_sys = { git = "https://github.com/rust-onig/rust-onig", revision = "fa90c0e97e90a056af89f183b23cd417b59ee6a2", optional = true }

[dev-dependencies]
assert_cmd = "1.0.1"
criterion = "0.5.1"

[[bench]]
name = "cmdbench"
harness = false

[features]
default = []
oniguruma = ["onig"]
